--- a/index.html
+++ b/index.html
@@ -8,11 +8,12 @@
     <title>Vujs 2</title>
     <!-- development version, includes helpful console warnings -->
     <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
+    <script src="components/message.js"></script>
 </head>
 
 <body>
     <div id="app">
-        {{message}}
+        <message></message>
     </div>
     <script>
         new Vue ({
