--- a/index.html
+++ b/index.html
@@ -9,11 +9,13 @@
     <!-- development version, includes helpful console warnings -->
     <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
     <script src="components/message.js"></script>
+    <script src="components/computed-properties.js"></script>
 </head>
 
 <body>
     <div id="app">
         <message></message>
+        <computed-properties></computed-properties>
     </div>
     <script>
         new Vue ({
