--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
     <script src="components/message.js"></script>
     <script src="components/computed-properties.js"></script>
     <script src="components/methods.js"></script>
+    <script src="components/vmodel.js"></script>
+    <script src="components/vmodel-checkboxes.js"></script>
 </head>
 
 <body>
@@ -18,6 +20,8 @@
         <message></message>
         <computed-properties></computed-properties>
         <methods></methods>
+        <vmodel></vmodel>
+        <vmodel-checkboxes></vmodel-checkboxes>
     </div>
     <script>
         new Vue ({
