--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <script src="components/methods.js"></script>
     <script src="components/vmodel.js"></script>
     <script src="components/vmodel-checkboxes.js"></script>
+    <script src="components/emit.js"></script>
 </head>
 
 <body>
@@ -22,13 +23,14 @@
         <methods></methods>
         <vmodel></vmodel>
         <vmodel-checkboxes></vmodel-checkboxes>
+        <emit @showCarBrand="showCarBrandFromEmitCmp"></emit>
     </div>
     <script>
         new Vue ({
             el: '#app',
-            data(){
-                return{
-                    message: 'Hola Mundo'
+            methods: {
+                showCarBrandFromEmitCmp (car){
+                    alert(cardBrand)
                 }
             }
 
