--- a/index.html
+++ b/index.html
@@ -23,14 +23,14 @@
         <methods></methods>
         <vmodel></vmodel>
         <vmodel-checkboxes></vmodel-checkboxes>
-        <emit @showCarBrand="showCarBrandFromEmitCmp"></emit>
+        <emit @showcarbrand="showCarBrandFromEmitCmp"></emit>
     </div>
     <script>
         new Vue ({
             el: '#app',
             methods: {
-                showCarBrandFromEmitCmp (car){
-                    alert(cardBrand)
+                showCarBrandFromEmitCmp (carBrand){
+                    alert(carBrand)
                 }
             }
 
