--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
     <script src="components/vmodel.js"></script>
     <script src="components/vmodel-checkboxes.js"></script>
     <script src="components/emit.js"></script>
+    <script src="components/parent-data.js"></script>
+    <script src="components/child-data.js"></script>
 </head>
 
 <body>
@@ -24,10 +26,22 @@
         <vmodel></vmodel>
         <vmodel-checkboxes></vmodel-checkboxes>
         <emit @showcarbrand="showCarBrandFromEmitCmp"></emit>
+        <parent-data></parent-data>
+        <child-data ref="childData"></child-data>
     </div>
     <script>
         new Vue ({
             el: '#app',
+            mounted(){
+                console.log('Vuejs instance mounted');
+                const cmpName = this.$refs.childData.cmpName;
+                console.log(cmpName);
+            },
+            data(){
+                return{
+                    appName: 'Iniciando con Vuejs 2'
+                }
+            },
             methods: {
                 showCarBrandFromEmitCmp (carBrand){
                     alert(carBrand)
