--- a/index.html
+++ b/index.html
@@ -17,10 +17,11 @@
     <script src="components/parent-data.js"></script>
     <script src="components/child-data.js"></script>
     <script src="components/child-methods.js"></script>
+    <script src="components/login.js"></script>
 </head>
 
 <body>
-    <div id="app">
+    <div id="app" style="margin-bottom:100px">
         <message></message>
         <computed-properties></computed-properties>
         <methods></methods>
@@ -30,6 +31,7 @@
         <parent-data></parent-data>
         <child-data ref="childData"></child-data>
         <child-methods ref="childMethod"></child-methods>
+        <login-form></login-form>
     </div>
     <script>
         new Vue ({
