--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     <script src="components/child-data.js"></script>
     <script src="components/child-methods.js"></script>
     <script src="components/login.js"></script>
+    <script src="components/loops.js"></script>
 </head>
 
 <body>
@@ -32,6 +33,7 @@
         <child-data ref="childData"></child-data>
         <child-methods ref="childMethod"></child-methods>
         <login-form></login-form>
+        <loops></loops>
     </div>
     <script>
         new Vue ({
