--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
     <script src="components/child-methods.js"></script>
     <script src="components/login.js"></script>
     <script src="components/loops.js"></script>
+    <script src="components/conditionals.js"></script>
+    <script src="components/slots.js"></script>
 </head>
 
 <body>
@@ -34,6 +36,16 @@
         <child-methods ref="childMethod"></child-methods>
         <login-form></login-form>
         <loops></loops>
+        <conditionals></conditionals>
+        <slots>
+            <p>Contenido del slot para el cuerpo</p>
+            <template slot="header">
+                <h3>Header del layourt con slots</h3>
+            </template>
+            <template slot="footer">
+                <p>Footer del layourt con slots</p>
+            </template>
+        </slots>
     </div>
     <script>
         new Vue ({
