--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
     <script src="components/loops.js"></script>
     <script src="components/conditionals.js"></script>
     <script src="components/slots.js"></script>
+    <script src="components/watchers.js"></script>
 </head>
 
 <body>
@@ -46,6 +47,7 @@
                 <p>Footer del layourt con slots</p>
             </template>
         </slots>
+        <watchers></watchers>
     </div>
     <script>
         new Vue ({
