--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
     <script src="components/message.js"></script>
     <script src="components/computed-properties.js"></script>
+    <script src="components/computed-properties-get-set.js"></script>
     <script src="components/methods.js"></script>
     <script src="components/vmodel.js"></script>
     <script src="components/vmodel-checkboxes.js"></script>
@@ -38,6 +39,7 @@
         <login-form></login-form>
         <loops></loops>
         <conditionals></conditionals>
+        <computed-properties-get-set></computed-properties-get>
         <slots>
             <p>Contenido del slot para el cuerpo</p>
             <template slot="header">
