--- a/index.html
+++ b/index.html
@@ -23,6 +23,10 @@
     <script src="components/conditionals.js"></script>
     <script src="components/slots.js"></script>
     <script src="components/watchers.js"></script>
+    <script src="components/dynamic-components/cmp1.js"></script>
+    <script src="components/dynamic-components/cmp2.js"></script>
+    <script src="components/dynamic-components/cmp3.js"></script>
+    <script src="components/load-dynamic-components.js"></script>
 </head>
 
 <body>
@@ -39,7 +43,7 @@
         <login-form></login-form>
         <loops></loops>
         <conditionals></conditionals>
-        <computed-properties-get-set></computed-properties-get>
+        <computed-properties-get-set></computed-properties-get-set>
         <slots>
             <p>Contenido del slot para el cuerpo</p>
             <template slot="header">
@@ -50,25 +54,26 @@
             </template>
         </slots>
         <watchers></watchers>
+        <load-dynamic-components></load-dynamic-components>
     </div>
     <script>
-        new Vue ({
+        new Vue({
             el: '#app',
-            mounted(){
+            mounted() {
                 console.log('Vuejs instance mounted');
                 const cmpName = this.$refs.childData.cmpName;
                 console.log(cmpName);
-                setTimeout(()=>{
+                setTimeout(() => {
                     this.$refs.childMethod.showCmpName()
-                }, 3000     )
+                }, 3000)
             },
-            data(){
-                return{
+            data() {
+                return {
                     appName: 'Iniciando con Vuejs 2'
                 }
             },
             methods: {
-                showCarBrandFromEmitCmp (carBrand){
+                showCarBrandFromEmitCmp(carBrand) {
                     alert(carBrand)
                 }
             }
