--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <title>Vujs 2</title>
     <!-- development version, includes helpful console warnings -->
     <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
+    <script src="directives/focus.js"></script>
     <script src="components/message.js"></script>
     <script src="components/computed-properties.js"></script>
     <script src="components/computed-properties-get-set.js"></script>
@@ -27,6 +28,7 @@
     <script src="components/dynamic-components/cmp2.js"></script>
     <script src="components/dynamic-components/cmp3.js"></script>
     <script src="components/load-dynamic-components.js"></script>
+    <script src="components/mixins.js"></script>
 </head>
 
 <body>
@@ -55,6 +57,7 @@
         </slots>
         <watchers></watchers>
         <load-dynamic-components></load-dynamic-components>
+        <mixins></mixins>
     </div>
     <script>
         new Vue({
