--- a/index.html
+++ b/index.html
@@ -8,8 +8,11 @@
     <title>Vujs 2</title>
     <!-- development version, includes helpful console warnings -->
     <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
+
     <script src="directives/focus.js"></script>
-    <script src="components/message.js"></script>
+    <script src="directives/change-styles.js"></script>
+
+    <script src="components/message.js" ></script>
     <script src="components/computed-properties.js"></script>
     <script src="components/computed-properties-get-set.js"></script>
     <script src="components/methods.js"></script>
@@ -33,7 +36,7 @@
 
 <body>
     <div id="app" style="margin-bottom:100px">
-        <message></message>
+        <message v-change-styles="{backgroundColor: 'red', color: 'white'}"></message>
         <computed-properties></computed-properties>
         <methods></methods>
         <vmodel></vmodel>
