--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 
     <script src="directives/focus.js"></script>
     <script src="directives/change-styles.js"></script>
+   <script src="filters/currency.filter.js"></script>
 
     <script src="components/message.js" ></script>
     <script src="components/computed-properties.js"></script>
