--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
     <script src="components/dynamic-components/cmp3.js"></script>
     <script src="components/load-dynamic-components.js"></script>
     <script src="components/mixins.js"></script>
+    <script src="components/props.js"></script>
 </head>
 
 <body>
@@ -62,6 +63,7 @@
         <watchers></watchers>
         <load-dynamic-components></load-dynamic-components>
         <mixins></mixins>
+        <props name="Gabi" surname="Alvarez" :age="2"></props>
     </div>
     <script>
         new Vue({
